# cpp_snake_game

./: CMakeLists.txt  LICENSE  README.md  config.cmake
.github/workflows/: cmake.yml
game/: CMakeLists.txt
game.exe/: CMakeLists.txt
game.exe/src/: main.cpp
game/include/: Config.h  Event.h  Food.h  Game.h  Graphics.h  Input.h  Map.h  Position.h  Snake.h  World.h
game/src/: Event.cpp  Game.cpp  Graphics.cpp  Input.cpp  Map.cpp  Snake.cpp  World.cpp
test/: CMakeLists.txt  main.cpp  test_event.cpp  test_map.cpp  test_snake.cpp
